[tool.poetry]
name = "Password"
version = "0.1.0"
description = "Python password encoding and decoding library"
authors = ["Ryder R <contactryderretzlaff@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
password = "^0.2"
stdiomask = "^0.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
